feat: add systemd service, use config files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,28 @@
     "stdlib.h": "c",
     "cmath": "c",
     "compare": "c",
-    "limits": "c"
+    "limits": "c",
+    "array": "c",
+    "atomic": "c",
+    "cstddef": "c",
+    "deque": "c",
+    "string": "c",
+    "unordered_map": "c",
+    "vector": "c",
+    "exception": "c",
+    "functional": "c",
+    "iterator": "c",
+    "memory": "c",
+    "memory_resource": "c",
+    "numeric": "c",
+    "optional": "c",
+    "string_view": "c",
+    "system_error": "c",
+    "algorithm": "c",
+    "random": "c",
+    "ostream": "c",
+    "streambuf": "c",
+    "tuple": "c",
+    "utility": "c"
   }
 }
